updated font and added css folder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<title>minnyScript</title>
 	<meta name="description" content="A Minneapolis-based web development club focusing on learning, practicing and implementation of skills." />
 	<link rel="stylesheet" href="/css/style.css" />
+	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
+
 </head>
 
 <body>
