--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>minnyScript</title>
 	<meta name="description" content="A Minneapolis-based web development club focusing on learning, practicing and implementation of skills." />
-	<link rel="stylesheet" href="/css/style.css" />
+	<link rel="stylesheet" href="/css/styles.css" />
 	<link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
 
 </head>
