--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-	<div class="page page-comingsoon">
+	<div≥>
 		<h1>Join minnyScript!</h1>
 		<p>We're a group of developers exploring today's powerful set of software development tools and frameworks.</p>
 	</div>
